Update deploy workflow to ignore data file changes
The deploy workflow now ignores changes to files in public/data/**, preventing unnecessary builds for data-only updates. Documentation and code have been updated to reflect that data is served directly from GitHub raw CDN, and the triggerRebuild function is deprecated and now skips rebuilds for data changes.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,11 +4,14 @@ on:
   push:
     branches: [ main ]
     paths:
-      - 'public/data/**'
+      # Exclude JSON data files - they're served directly from GitHub raw content
+      # Only build when actual code/structure changes
       - 'src/**'
       - 'package.json'
       - 'vite.config.js'
       - 'index.html'
+      - 'public/**'
+      - '!public/data/**'  # Ignore changes to data files
       
   workflow_dispatch:
   
