Add inline editing and approval workflow to OrderManager
Introduces inline editing for order details in OrderManager, allowing directors to edit order fields directly in the modal. Adds an approval modal for directors to approve or deny orders with comments, and refines permission checks and UI for AlumniManager. Updates summary statistics to reflect filtered orders and improves ScheduleManager with overview dashboard, team stats, and calendar utilities. Removes legacy migration scripts and related npm scripts.

--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "deploy": "npm run build && gh-pages -d dist",
-    "migrate-images": "node migrate-team-images.js",
-    "migrate-alumni": "node migrate-alumni-to-supabase.js"
+    "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.78.0",
