--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "migrate:schedule": "node migrate-schedule-data.js"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.78.0",
+    "@supabase/supabase-js": "^2.83.0",
     "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.3",
@@ -22,8 +22,7 @@
     "react-dom": "^18.2.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^6.18.0",
-    "remark-gfm": "^4.0.1",
-    "supabase": "^2.58.5"
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
@@ -35,6 +34,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
     "gh-pages": "^6.0.0",
+    "supabase": "^2.58.5",
     "vite": "^4.5.0"
   }
 }
