--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.3",
+    "pdfjs-dist": "^3.10.111",
     "jszip": "^3.10.1",
     "lucide-react": "^0.552.0",
     "react": "^18.2.0",
